auth/keycloak/keycloak-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak
  namespace: auth
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - env:
        - name: KEYCLOAK_ADMIN
          value: admin
        - name: KEYCLOAK_ADMIN_PASSWORD
          value: admin
        - name: KC_DB
          value: postgres
        - name: KC_DB_URL
          value: jdbc:postgresql://keycloak-postgresdb/keycloakdb
        - name: KC_DB_USERNAME
          value: admin
        - name: KC_DB_PASSWORD
          value: admin
        image: quay.io/keycloak/keycloak:25.0.4
        name: keycloak
        ports:
        - containerPort: 8080
        args: ["start-dev", "--hostname", "http://houseproject.internal/keycloak"]
      dnsPolicy: ClusterFirst
      restartPolicy: Always
